--- a/database.properties
+++ b/database.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost/distribuida
+spring.datasource.url=jdbc:postgresql://localhost:5432/distribuida
 spring.datasource.username=postgres
 spring.datasource.password=junior200
 
@@ -12,3 +12,7 @@ spring.thymeleaf.mode=HTML5
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates
+
+
+server.port=8081
+
