--- a/database.properties
+++ b/database.properties
@@ -12,7 +12,9 @@ spring.thymeleaf.mode=HTML5
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates
-
-
 server.port=8081
 
+####cliente 2
+spring.application.name=eureka-cliente2
+eureka.client.registerWithEureka=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
