--- a/m2-instr.properties
+++ b/m2-instr.properties
@@ -1,20 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/distribuida
-spring.datasource.username=postgres
-spring.datasource.password=junior200
-
-spring.datasource.dbcp2.validation-query=SELECT 1
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.thymeleaf.mode=HTML5
-
-spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/templates
-server.port=8081
-
-####cliente 2
-spring.application.name=eureka-cliente2
-eureka.client.registerWithEureka=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.application.name=client2-instrum
+server.port=8083
+message=asdf
