--- a/m2-instr.properties
+++ b/m2-instr.properties
@@ -1,3 +1,14 @@
 server.port=8080
 spring.application.name=client2-instrum
-message=asdf
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/distribuida
+spring.datasource.username=postgres
+spring.datasource.password=junior200
+
+spring.datasource.dbcp2.validation-query=SELECT 1
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
