--- a/client1-alb-singer.properties
+++ b/client1-alb-singer.properties
@@ -12,3 +12,14 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=galegale1024@gmail.com
+spring.mail.password=Temporal2014
+spring.mail.properties.smtp.auth=true
+spring.mail.properties.smtp.starttls.enable=true
