--- a/client1-alb-singer.properties
+++ b/client1-alb-singer.properties
@@ -19,7 +19,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=galegale1024@gmail.com
-spring.mail.password=Temporal2014
-spring.mail.properties.smtp.auth=true
-spring.mail.properties.smtp.starttls.enable=true
+spring.mail.username=marhur93@gmail.com
+spring.mail.password=pa$word007
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
