--- a/client1-alb-singer.properties
+++ b/client1-alb-singer.properties
@@ -23,3 +23,6 @@ spring.mail.username=pdistribuida2018@gmail.com
 spring.mail.password=Temporal2014
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+eureka.client.registerWithEureka=true
+eureka.client.serviceUrl.defaultZone=http://192.168.99.101/eureka/
