--- a/client2-instrum.properties
+++ b/client2-instrum.properties
@@ -12,3 +12,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+
+eureka.client.registerWithEureka=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
