--- a/client2-instrum.properties
+++ b/client2-instrum.properties
@@ -2,7 +2,8 @@ server.port=8081
 spring.application.name=client2-instrum
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/distribuida
+#spring.datasource.url=jdbc:postgresql://localhost:5432/distribuida
+spring.datasource.url=jdbc:postgresql://postgresdocker/distribuida
 spring.datasource.username=postgres
 spring.datasource.password=junior200
 
@@ -15,4 +16,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
  
 eureka.client.registerWithEureka=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://eureka/eureka/
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
