--- a/client1-alb-singer.properties
+++ b/client1-alb-singer.properties
@@ -25,4 +25,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 eureka.client.registerWithEureka=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://eureka/eureka/
